Actualizando enlace avatar

--- a/crea-avatar.html
+++ b/crea-avatar.html
@@ -43,7 +43,7 @@
             <iframe
                 id="frame"
                 class="rpm-frame"
-                src="https://atelier-mvp.readyplayer.me/avatar?frameApi"
+                src="https://readyplayer.me/avatar?lang=en&id=698c1944d9645a11b107fed6"
                 allow="camera *; microphone *; clipboard-write"
                 title="Editor de Avatar">
             </iframe>
